tests/snapshots/run_wpt_conformance__litert_identity_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
identity.https.any.js identity float16 0D scalar, litert
 identity :: identity float16 0D scalar: index 0: actual=0.0041999817 expected=-4.2734375 ulp=24723 tolerance=4
  inputs: identityInput: [-4.2734375]
  expected identityOutput: [-4.2734375]
  actual identityOutput: [0.0041999817]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    identityInput: f16[];
  }

  nodes {
    [identityOutput] = identity(identityInput, label="");
  }

  outputs { identityOutput; }
}
